
syntax = "proto3";

package Microsoft.Net.Wifi.Remote.Service;

import "WifiRemote.proto";

service WifiRemote
{
    rpc GetWifiApControl (Microsoft.Net.Wifi.Remote.Request) returns (Microsoft.Net.Wifi.Remote.Response) {}
}
